force-app/main/default/objects/MA_GenericMapping__mdt/MA_GenericMapping__mdt.object-meta.xml
<CustomObject>
    <description>MA GenericMapping -&gt; 
1. Maps with key value pairs are stored.
2. Maps is used for the Progression logic, Field set, Readonly fields and Mandatory fields.
3. Progression logic Map - Selected Sales Stage as key with possible Sales Stage values.
4. Field set Map - 
5. Readonly fields Map - 
6. Mandatory Fields Map - Page No as key with Fields which is to be mandatory as values.</description>
    <label>MA GenericMapping</label>
    <pluralLabel>MA GenericMappings</pluralLabel>
</CustomObject>