force-app/main/default/objects/MA_GenericMapping__mdt/fields/Current_Selected_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Selected_Stage__c</fullName>
    <label>Current Selected Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>