force-app/main/default/objects/MA_GenericMapping__mdt/fields/Generic_Map__c.field-meta.xml
<CustomField>
    <fullName>Generic_Map__c</fullName>
    <label>Generic Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>