force-app/main/default/objects/MA_GenericMapping__mdt/fields/Generic_Map_Text__c.field-meta.xml
<CustomField>
    <fullName>Generic_Map_Text__c</fullName>
    <label>Generic Map Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>