force-app/main/default/objects/MA_GenericMapping__mdt/fields/Help_Instuction_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Instuction_Text__c</fullName>
    <description>Field Help Instuction Text</description>
    <label>Help Instuction Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>