force-app/main/default/objects/MA_GenericMapping__mdt/fields/Previous_Selected_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Selected_Stage__c</fullName>
    <label>Previous Selected Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>