force-app/main/default/objects/MA_GenericMapping__mdt/fields/SaleStage_Progression_Mapping__c.field-meta.xml
<CustomField>
    <fullName>SaleStage_Progression_Mapping__c</fullName>
    <label>SaleStage Progression Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>